--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>influencer-gear</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- header section starts here -->
+    <header>
+      <nav>
+        <h2 class="nav-title">Influencer products</h2>
+        <div class="nav-item">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Log In</a></li>
+          </ul>
+          <a href="#">
+            <img src="" alt="" />
+          </a>
+          <a href="#">
+            <img src="" alt="" />
+          </a>
+        </div>
+      </nav>
+    </header>
+    <!-- header section ends here -->
+    <!-- main section starts here -->
+    <main></main>
+    <!-- main section ends here -->
+    <!-- footer section starts here -->
+    <footer></footer>
+    <!-- footer section starts here -->
+  </body>
 </html>
