banner added with responsive

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>influencer-gear</title>
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/73b7860540.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- header section starts here -->
+    <div class="container">
+      <!-- header section starts here -->
     <header>
       <nav>
         <h2 class="nav-title">Influencer products</h2>
@@ -19,20 +22,33 @@
             <li><a href="#">Products</a></li>
             <li><a href="#">Sign up</a></li>
             <li><a href="#">Log In</a></li>
+            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href="#"><i class="fa-sharp fa-light fa-cart-shopping"></i></a></li>
           </ul>
-          <a href="#">
-            <img src="" alt="" />
-          </a>
-          <a href="#">
-            <img src="" alt="" />
-          </a>
         </div>
       </nav>
+      <!-- banner section starts here -->
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">Start your Journey as<br> 
+            Influencer</h1>
+          <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+          <button class="btn-primary">Prebook now <span><i class="fa-solid fa-arrow-right"></i></span></button>
+        </div>
+        <div class="banner-img">
+          <img src="images/main-camera.png" alt="">
+        </div>
+      </div>
+      <!-- banner section ends here -->
+      <!-- sponsor section starts here -->
+      
+      <!-- sponsor section ends here -->
     </header>
     <!-- header section ends here -->
     <!-- main section starts here -->
     <main></main>
     <!-- main section ends here -->
+    </div>
     <!-- footer section starts here -->
     <footer></footer>
     <!-- footer section starts here -->
