footer section added

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@400;500;600;700&family=Roboto:wght@700&display=swap"
       rel="stylesheet"
     />
-    <!-- font awesome -->
-    <script
-      src="https://kit.fontawesome.com/73b7860540.js"
+    <!-- font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous"
-    ></script>
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -32,9 +35,7 @@
                 <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
               </li>
               <li>
-                <a href="#"
-                  ><i class="fa-sharp fa-light fa-cart-shopping"></i
-                ></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
               </li>
             </ul>
           </div>
@@ -165,7 +166,11 @@
           </div>
           <div class="features-content">
             <h3 class="feature-title">Featured products at one place</h3>
-            <p class="feature-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p class="feature-description">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
             <button class="btn-primary">
               Join Now <span><i class="fa-solid fa-arrow-right"></i></span>
             </button>
@@ -176,7 +181,19 @@
       <!-- main section ends here -->
     </div>
     <!-- footer section starts here -->
-    
+    <footer>
+      <div class="footer-content">
+        <h5>Influencer products</h5>
+        <p>Copyright &copy; 2020 influencer products</p>
+        <p>All rights reserved</p>
+        <div class="media-links">
+          <a href="#"><i class="fa-brands fa-square-instagram fa-lg"></i></a>
+          <a href="#"><i class="fa-brands fa-dribbble fa-lg"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter fa-lg"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
+        </div>
+      </div>
+    </footer>
     <!-- footer section starts here -->
   </body>
 </html>
