--- a/index.html
+++ b/index.html
@@ -89,64 +89,64 @@
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
-              <h4 class="item-price">$50.48</h4>
+              <img src="images/mic.png" alt="" class="item-img" />
+              <h3 class="item-heading">microphone</h3>
+              <h4 class="item-price">$120.25</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
-              <h4 class="item-price">$50.48</h4>
+              <img src="images/airpod.png" alt="" class="item-img" />
+              <h3 class="item-heading">Airbuds</h3>
+              <h4 class="item-price">$100.00</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
-              <h4 class="item-price">$50.48</h4>
+              <img src="images/drone.png" alt="" class="item-img" />
+              <h3 class="item-heading">Drone</h3>
+              <h4 class="item-price">$980.25</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
-              <h4 class="item-price">$50.48</h4>
+              <img src="images/lights.png" alt="" class="item-img" />
+              <h3 class="item-heading">Light Setup</h3>
+              <h4 class="item-price">$1200.00</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
-              <h4 class="item-price">$50.48</h4>
+              <img src="images/setup.png" alt="" class="item-img" />
+              <h3 class="item-heading">Photoshoot set</h3>
+              <h4 class="item-price">$820.40</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
-              <h4 class="item-price">$50.48</h4>
+              <img src="images/camera.png" alt="" class="item-img" />
+              <h3 class="item-heading">Vlogging Camera</h3>
+              <h4 class="item-price">$1800.80</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
-              <h4 class="item-price">$50.48</h4>
+              <img src="images/single-light.png" alt="" class="item-img" />
+              <h3 class="item-heading">Green Screen</h3>
+              <h4 class="item-price">$25.48</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
               <p>Buyers protection possible!</p>
             </div>
             <div class="collection-item">
-              <img src="images/tripod.png" alt="" class="item-img" />
-              <h3 class="item-heading">Flex Tripod</h3>
+              <img src="images/action.png" alt="" class="item-img" />
+              <h3 class="item-heading">Action Camera</h3>
               <h4 class="item-price">$50.48</h4>
               <h5 class="item-rating">rating: 4.99</h5>
               <p>Worldwide shifting<br />available</p>
